fixed quiz button spacing

--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ li {
 #quiz button {
   display: block;
   font-size:22px;
+  margin-top: 5px;
 }
 button {
   color: white;
